--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^12.3.0",
     "@ngrx/store": "^12.3.0",
     "@ngrx/store-devtools": "^12.3.0",
+    "lodash": "^4.17.21",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-pagination": "^5.1.1",
     "ngx-shimmer-loading": "0.0.5",
@@ -35,6 +36,7 @@
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
     "@types/jasmine": "~3.8.0",
+    "@types/lodash": "^4.14.171",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
